--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ git branch:'main',url:'https://github.com/Jessyjessica/Calculator.git';
 }
 stage('complie') {
 steps {
-sh 'javac Cslculator.java'
+sh 'javac Calculator.java'
 }
 }
 stage('build') {
